Connecting bootstrap. Creation of new pages and business logic.